--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dependencies": {
         "@auth/sveltekit": "^0.3.11",
         "@supabase/supabase-js": "^2.38.4",
-        "@vercel/analytics": "^1.1.1"
+        "@vercel/analytics": "^1.1.1",
+        "svelte-system-info": "^1.0.0"
     }
 }
